# InsurePredict-Customer-Conversion-Insights

./: .dockerignore  .gitignore  README.md  app.py  dvc.yaml  main.py  predict_demo.py  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: aws.yaml
Notebooks/: experiments.ipynb  final_model.ipynb  model_trainer.ipynb  mongo_db_demo.ipynb
config/: model.yaml  schema.yaml
data/raw/: data.csv.dvc
model/: model.pkl.dvc
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/configuration/: aws_connection.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
static/css/: style.css
static/predictions/: temp_batch_test_predictions.csv
templates/: vehicledata.html
tests/unit/components/: test_data_ingestion.py  test_data_transformation.py  test_data_validation.py  test_model_trainer.py
