[project]
name = "insurepredict-customer-conversion-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.7",
    "botocore<=1.40.4",
    "catboost>=1.2.8",
    "certifi>=2025.8.3",
    "dagshub>=0.6.2",
    "dill>=0.4.0",
    "dvc>=3.61.0",
    "dvc-s3>=3.2.2",
    "fastapi>=0.116.1",
    "from-root>=1.3.0",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "matplotlib>=3.10.5",
    "mlflow==2.22.0",
    "mypy-boto3-s3>=1.40.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]

[dependency-groups]
dev = [
    "boto3>=1.39.8",
    "botocore>=1.39.8",
    "catboost>=1.2.8",
    "certifi>=2025.8.3",
    "dagshub>=0.6.2",
    "dill>=0.4.0",
    "dvc>=3.61.0",
    "fastapi>=0.116.1",
    "from-root>=1.3.0",
    "imbalanced-learn>=0.13.0",
    "insurepredict-customer-conversion-insights",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "mlflow==2.22.0",
    "mypy-boto3-s3>=1.40.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]

[tool.uv.sources]
insurepredict-customer-conversion-insights = { workspace = true }
